# Course_Work_3

./: README.md  pyproject.toml
src/: functions.py  main.py
test/: test_amount.py  test_code.py  test_date_and_purpose.py  test_examination.py  test_last_five_operations.py  test_open_operation.py  test_sorted_operations.py  test_transaction.py
