[tool.poetry]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = ["vlad_vosov <vlad.shvetesov@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
